Implement integration testing

--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
       "testing-library/render-result-naming-convention": "off",
       "testing-library/prefer-screen-queries": "off",
       "testing-library/prefer-presence-queries": "off",
-      "testing-library/no-render-in-setup": "off"
+      "testing-library/no-render-in-setup": "off",
+      "react-hooks/exhaustive-deps": "off"
     }
   },
   "browserslist": {
