Add header and footer

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -25,6 +25,18 @@
       "sizes": "512X512",
       "type": "image/png",
       "purpose": "maskable"
+    },
+    {
+      "src": "meet-app-Logo.png",
+      "type": "image/png",
+      "sizes": "193x65",
+      "purpose": "any"
+    },
+    {
+      "src": "search.png",
+      "type": "image/png",
+      "sizes": "32x32",
+      "purpose": "any"
     }
   ],
   "start_url": ".",
