--- a/manifest.json
+++ b/manifest.json
@@ -25,6 +25,12 @@
       "sizes": "512X512",
       "type": "image/png",
       "purpose": "maskable"
+    },
+    {
+      "src": "meet-app-Logo.png",
+      "type": "image/png",
+      "sizes": "193x65",
+      "purpose": "any"
     }
   ],
   "start_url": ".",
